// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem package.json exports > should allow to have folder name the same like file for export 1`] = `
"var config_default = () => "config";

module.exports = config_default;
"
`;

exports[`packem package.json exports > should allow to have folder name the same like file for export 2`] = `
"var config_default = () => "config";

export { config_default as default };
"
`;

exports[`packem package.json exports > should export dual package for type commonjs 1`] = `
"var src_default = () => "index";

module.exports = src_default;
"
`;

exports[`packem package.json exports > should export dual package for type commonjs 2`] = `
"var src_default = () => "index";

export { src_default as default };
"
`;

exports[`packem package.json exports > should export dual package for type module 1`] = `
"var src_default = () => "index";

module.exports = src_default;
"
`;

exports[`packem package.json exports > should export dual package for type module 2`] = `
"var src_default = () => "index";

export { src_default as default };
"
`;

exports[`packem package.json exports > should generate different files for mts and cts with same shared code 1`] = `
"const Colorize = function() {
	return {
		color: "red",
		text: "hello world"
	};
};

const result = Colorize();
const { text, color } = result;

export { color, result as default, text };
"
`;

exports[`packem package.json exports > should generate different files for mts and cts with same shared code 2`] = `
"const Colorize = function() {
	return {
		color: "red",
		text: "hello world"
	};
};

const result = Colorize();

module.exports = result;
"
`;

exports[`packem package.json exports > should generate different files, if file with same name, but with cts and mts ending was found 1`] = `
"const result = "mts";

export { result };
"
`;

exports[`packem package.json exports > should generate different files, if file with same name, but with cts and mts ending was found 2`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const result = "cts";

exports.result = result;
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 1`] = `
"//#region src/index.js
const index = "index";
//#endregion
export { index };
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 2`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.react-server.js
const index = "index.react-server";
//#endregion
exports.index = index;
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 3`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/foo.js
const foo = "foo";
//#endregion
exports.foo = foo;
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 4`] = `
"#!/usr/bin/env node
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/bin/cli.js
const cli = "cli";
//#endregion
exports.cli = cli;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 1`] = `
"import { Client } from './packem_shared/Client-BBMqEblW.mjs';
import { Button } from './ui.mjs';
import { action } from './packem_shared/action-DKFcx1Vi.mjs';
export { Button, Client, Client as UIClient, action };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 2`] = `
"'use server';
async function action() {
	return "server-action";
}

export { action };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 3`] = `
"'use client';
function Client() {
	return "client-module";
}

export { Client };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 4`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const require_Client = require('./packem_shared/Client-C9ddnDzS.cjs');
const require_ui = require('./ui.cjs');
const require_action = require('./packem_shared/action-PXD57KE3.cjs');
exports.Button = require_ui.Button;
exports.Client = require_Client.Client;
exports.UIClient = require_Client.Client;
exports.action = require_action.action;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 5`] = `
"'use server';
async function action() {
	return "server-action";
}

exports.action = action;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 6`] = `
"'use client';
function Client() {
	return "client-module";
}

exports.Client = Client;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 1`] = `
"'use client';
import { Client } from './packem_shared/Client-BBMqEblW.mjs';
import React, { useState } from 'react';

function Button() {
	const [count] = useState(0);
	return React.createElement("button", \`count: \${count}\`);
}

export { Button, Client };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 2`] = `
"'use client';
function Client() {
	return "client-module";
}

export { Client };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 3`] = `
"'use client';
Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __copyProps = (to, from, except, desc) => {
	if (from && typeof from === "object" || typeof from === "function") for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {
		key = keys[i];
		if (!__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
			get: ((k) => from[k]).bind(null, key),
			enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
		});
	}
	return to;
};
var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", {
	value: mod,
	enumerable: true
}) : target, mod));

const require_Client = require('./packem_shared/Client-C9ddnDzS.cjs');
let react = require('react');
react = __toESM(react);
function Button() {
	const [count] = (0, react.useState)(0);
	return react.default.createElement("button", \`count: \${count}\`);
}

exports.Button = Button;
exports.Client = require_Client.Client;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 4`] = `
"'use client';
function Client() {
	return "client-module";
}

exports.Client = Client;
"
`;

exports[`packem package.json exports > should generate proper assets with custom extensions from outputExtensionMap > cjs output 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.ts
const value = "index";
//#endregion
exports.value = value;
"
`;

exports[`packem package.json exports > should generate proper assets with custom extensions from outputExtensionMap > dts output 1`] = `
"declare const value = "index";
export { value };
"
`;

exports[`packem package.json exports > should generate proper assets with custom extensions from outputExtensionMap > mjs output 1`] = `
"//#region src/index.ts
const value = "index";
//#endregion
export { value };
"
`;

exports[`packem package.json exports > should generate proper assets with js based on the package.json exports default > cjs output 1`] = `
"Object.defineProperties(exports, {
	__esModule: { value: true },
	[Symbol.toStringTag]: { value: "Module" }
});
//#region \\0rolldown/runtime.js
var __create = Object.create;
var __defProp = Object.defineProperty;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __copyProps = (to, from, except, desc) => {
	if (from && typeof from === "object" || typeof from === "function") for (var keys = __getOwnPropNames(from), i = 0, n = keys.length, key; i < n; i++) {
		key = keys[i];
		if (!__hasOwnProp.call(to, key) && key !== except) __defProp(to, key, {
			get: ((k) => from[k]).bind(null, key),
			enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
		});
	}
	return to;
};
var __toESM = (mod, isNodeMode, target) => (target = mod != null ? __create(__getProtoOf(mod)) : {}, __copyProps(isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", {
	value: mod,
	enumerable: true
}) : target, mod));
//#endregion
let my_mod = require("my-mod");
my_mod = __toESM(my_mod);
//#region src/index.js
var src_default = "exports-sugar-default";
function method() {
	return my_mod.default.test();
}
//#endregion
exports.default = src_default;
exports.method = method;
"
`;

exports[`packem package.json exports > should generate proper assets with js based on the package.json exports default > mjs output 1`] = `
"import myMod from "my-mod";
//#region src/index.js
var src_default = "exports-sugar-default";
function method() {
	return myMod.test();
}
//#endregion
export { src_default as default, method };
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 1`] = `
"var src_default = () => "index";

module.exports = src_default;
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 2`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
function render() {
	console.log("Page A");
}

exports.render = render;
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 3`] = `
"function render() {
	console.log("Page A");
}

export { render };
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 4`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
function render() {
	console.log("Page B");
}

exports.render = render;
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 5`] = `
"function render() {
	console.log("Page B");
}

export { render };
"
`;

exports[`packem package.json exports > should work with ESM package with CJS main field > cjs output 1`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
//#region src/index.js
const value = "cjs";
//#endregion
exports.value = value;
"
`;

exports[`packem package.json exports > should work with ESM package with CJS main field > mjs output 1`] = `
"//#region src/index.js
const value = "cjs";
//#endregion
export { value };
"
`;

exports[`packem package.json exports > should work with edge export condition 1`] = `
"const isEdge = false;

export { isEdge };
"
`;

exports[`packem package.json exports > should work with edge export condition 2`] = `
"const isEdge = true;

export { isEdge };
"
`;

exports[`packem package.json exports > should work with multi entries 1`] = `
"var src_default = "index";

module.exports = src_default;
"
`;

exports[`packem package.json exports > should work with multi entries 2`] = `
"require('./shared.cjs');
function client(c) {
	return "client" + c;
}

module.exports = client;
"
`;

exports[`packem package.json exports > should work with multi types 1`] = `
"const index = "index";

export { index };
"
`;

exports[`packem package.json exports > should work with multi types 2`] = `
"declare const index = "index";
export { index };
"
`;

exports[`packem package.json exports > should work with multi types 3`] = `
"Object.defineProperty(exports, Symbol.toStringTag, { value: "Module" });
const index = "index";

exports.index = index;
"
`;

exports[`packem package.json exports > should work with single entry 1`] = `
"var src_default = () => "index";

module.exports = src_default;
"
`;
